# bv-craft

./: .gitignore  CMakeLists.txt  README.md  main.c
.cache/clangd/index/: Block.c.879AF3CE068548E6.idx  Block.h.289C223999EB3059.idx  Camera.c.185CF925200DBEA3.idx  Camera.h.091EACC74ED5D420.idx  Chunk.c.44A5F08F72B3BD40.idx  Chunk.h.F616DF3FE9856086.idx  FastNoiseLite.h.0B6340FA6E4CA638.idx  Shader.c.03DDAB8C381ABBD5.idx  Shader.h.ED4936B0412B8A2A.idx  World.c.6DAD812A3E498C21.idx  World.h.3C8DA8B715B5BCAD.idx  common.h.A32C6E5AD4D7AD02.idx  glad.c.4E71D602999530A5.idx  glad.h.6A57673F196872C9.idx  khrplatform.h.3A1B9B3EF449F1D9.idx  linealg.h.D22DD4529550122E.idx  list.c.494F780751A12549.idx  list.h.7F4B8609BED29728.idx  main.c.1001824CB8795ED8.idx  mat.h.8A91E6DD81760AB3.idx  queue.c.09F178219F4B8058.idx  queue.h.CAA23E3949476FCF.idx  state.c.054FE6BA85C6AFDE.idx  state.h.352786EF2C92CD35.idx  stb_image.h.4A81B288E6E5DC27.idx  thread.c.20BBA23A10890252.idx  thread.h.C5260C07286858B4.idx  vec.h.E1CAB1D657C604E7.idx  worldgen.c.2136FAC2CA914A17.idx  worldgen.h.C93023642245590A.idx
glad/: glad.h
glad_backup/src/: glad.c
lib/cutility/include/: list.h
src/: Block.c  Block.h  CMakeLists.txt  Camera.c  Camera.h  Chunk.c  Chunk.h  Shader.c  Shader.h  World.c  World.h  common.h  mesh.h  state.c  state.h  thread.c  thread.h  worldgen.c  worldgen.h
src/headers/: Shader.h  common.h
src/math/: linealg.h  mat.h  vec.h
src/shaders/: basic.frag  basic.vert  basic.vertex  lighted.frag  lighted.vert  tex_array.frag  textured.frag  textured.vert
